--- a/app/src/main/res/layout/fragment_choose_area.xml
+++ b/app/src/main/res/layout/fragment_choose_area.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#fff"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:gravity="center_vertical"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
         <Button
+            android:layout_centerVertical="true"
             android:id="@+id/button_back"
-            android:background="@mipmap/back"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginLeft="8dp"
-            android:scaleType="centerCrop"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
-        <EditText
-            android:id="@+id/editText"
-
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:background="#fff"
-            android:layout_width="match_parent"
+            android:background="@mipmap/back"
+            android:scaleType="centerCrop" />
+        <TextView
+            android:id="@+id/textView_City"
+            android:textSize="18sp"
+            android:textColor="#fff"
+            android:text="选择城市"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/button_search"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="8dp"
-            android:background="@mipmap/search"
-            android:layout_width="25dp"
-            android:layout_height="25dp" />
     </RelativeLayout>
     <ListView
         android:id="@+id/listView"
