--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            app:cardBackgroundColor="#00000000"
+            android:elevation="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textView_forecast_date"
-            android:gravity="center_horizontal"
             android:layout_weight="1"
             android:textColor="#fff"
             android:layout_width="0dp"
@@ -22,8 +35,7 @@
             android:id="@+id/image_forecast_cond"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@mipmap/t101" />
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/textView_forecast_cond"
@@ -39,4 +51,6 @@
             android:textColor="#fff"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
+        </LinearLayout>
+        </android.support.v7.widget.CardView>
 </LinearLayout>
