--- a/app/src/main/res/layout/weather_bottom.xml
+++ b/app/src/main/res/layout/weather_bottom.xml
@@ -15,6 +15,7 @@
         app:cardBackgroundColor="#8000">
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
@@ -76,13 +77,13 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_marginLeft="4dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:layout_marginLeft="4dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="0dp"
@@ -101,26 +102,26 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/image_Tomorrow"
-                    android:scaleType="centerCrop"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_gravity="right"
                     android:layout_marginLeft="18dp"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp" />
+                    android:scaleType="centerCrop" />
 
                 <TextView
-                    android:textColor="#fff"
-                    android:layout_gravity="right"
                     android:id="@+id/textView_TomorrowInfo"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:textColor="#fff" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
