--- a/app/src/main/res/layout/weather_forecast.xml
+++ b/app/src/main/res/layout/weather_forecast.xml
@@ -13,21 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TextView
+        android:textSize="18sp"
         android:layout_gravity="center_horizontal"
         android:textColor="#fff"
         android:text="未来7天预报"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </LinearLayout>
-        <ImageView
-            android:src="@drawable/view_fgx"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
     </android.support.v7.widget.CardView>
